Overlapping modals resolved Minor changes on library store Display pattern made generic with scale factor associated to the container

--- a/src/index.css
+++ b/src/index.css
@@ -174,3 +174,19 @@
   height: 100%;
   background-color: red;
 }
+
+/* Library CSS */
+
+.library-display {
+  border: 1px solid #292b2c;
+  margin: 2px;
+}
+
+.library-display:hover {
+  border: 2px solid #3b3e3f;
+}
+
+.display-pattern-container {
+  width: 100%;
+  height: 100%;
+}
